# Changelog
# $Id$
nn-nn-13 - Version 5.1.27

  - Fix for Bug#62469, JDBC Authentication Fails with Null Byte in Scramble

  - Fix for Bug#69506, XAER_DUPID error code is not returned when a duplicate XID is offered in Java.

  - Added support for multi-master replication topographies in ReplicationDriver.  ReplicationDriver now uses two discrete load-balanced
    connections, one each for master and slave connections.  The same load-balancing options which apply to load-balanced connections
    now also apply to ReplicationConnections.  By default, this means that when a ReplicationConnection uses master connections
    (because the read-only property of the Connection is false), work may be re-balanced between configured master hosts at transaction 
    boundaries.  As with load-balanced connections, the ReplicationConnection host list may be managed within the JVM (see
    com.mysql.jdbc.ReplicationConnectionGroupManager) or optionally via JMX (using replicationEnableJMX configuration option; see
    com.mysql.jdbc.jmx.ReplicationGroupManagerMBean).  To specify multi-master replication topographies, define each host "type"
    property using the following format:
 
    address=(host=hostname)(port=3306)(type=[master|slave])

    In the absense of explicit type definitions, the driver will assume a single master listed first, with all subsequently-listed
    hosts configured as slaves.

  - Fix for Bug#63354 (16443992), JDBC cannot make new connections if master is down.

  - Fix for Bug#17003626, REGRESSION TEST FAILURE WITH SERVER VERSION 5.7.1

  - Removed ant-contrib.jar from C/J distribution.

  - Added tests for GIS precise spatial operations introduced in 5.6GA.

  - Fixed META-INF information

  - Fix for Bug#17251955, ARRAYINDEXOUTOFBOUNDSEXCEPTION ON LONG MULTI-BYTE DB/USER NAMES

  - Fix for Bug#50538, DatabaseMetaData.getDriverVersion() contains unexpanded ${bzr.revision-id}

08-05-13 - Version 5.1.26
