@@ -62,7 +62,6 @@ ResultSet.Query_generated_no_fields_for_ResultSet_57=Query generated no fields f
 ResultSet.Illegal_value_for_fetch_direction_64=Illegal value for fetch direction
 ResultSet.Value_must_be_between_0_and_getMaxRows()_66=Value must be between 0 and getMaxRows()
 ResultSet.Query_generated_no_fields_for_ResultSet_99=Query generated no fields for ResultSet
-ResultSet.Cannot_absolute_position_to_row_0_110=Cannot absolute position to row 0
 ResultSet.Operation_not_allowed_after_ResultSet_closed_144=Operation not allowed after ResultSet closed
 ResultSet.Before_start_of_result_set_146=Before start of result set
 ResultSet.After_end_of_result_set_148=After end of result set
